# Assistent-Dentaire

./: BUG_REPORT.md  DEPENDENCY_AUDIT_REPORT.md  HAYSTACK_INTEGRATION.md  PULL_REQUEST.md  README.md
Dental assistent PYTHON/: Architeture
Dental assistent PYTHON/BackEnd/: .gitignore  README.md  build_backend.py  build_backend.sh  conftest.py  dental-backend.spec  main.py  requirements.txt  test_platform_integration.py
Dental assistent PYTHON/BackEnd/app/: audit.py  config.py  errors.py  llm_config.py  middleware.py  observability.py  sanitize.py  security.py  worker.py
Dental assistent PYTHON/BackEnd/app/api/: __init__.py  error_report.py  health.py  rag.py  setup.py  summarize.py
Dental assistent PYTHON/BackEnd/app/eval/: __init__.py  run_eval.py  samples.py  scorer.py
Dental assistent PYTHON/BackEnd/app/llm/: __init__.py  local_llm.py  whisper.py
Dental assistent PYTHON/BackEnd/tests/: test_api_contracts.py  test_error_scenarios.py  test_pipeline.py  test_smartnote_eval.py
Dental assistent PYTHON/FrontEnd/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Dental assistent PYTHON/FrontEnd/src/: api.ts  app.tsx  errors.ts  main.rs  tauri.conf.json  vite-env.d.ts
Dental assistent PYTHON/FrontEnd/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Dental assistent PYTHON/FrontEnd/src-tauri/capabilities/: default.json
Dental assistent PYTHON/FrontEnd/src-tauri/src/: main.rs
Dental assistent PYTHON/FrontEnd/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
(+36 files in other folders)
