[package]
name = "dental-assistant"
version = "1.0.0"
description = "AI-Powered Dental Assistant"
authors = ["Dental Assistant Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-sidecar", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
